// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessBar should change the selected line when selecting an option from the dropdown 1`] = `
<div
  class="App"
  data-testid="process-bar"
>
  <div
    class="App-container"
  >
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-0"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-0"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-1"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-1"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-2"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-2"
        style="width: 0%;"
      />
    </div>
    <div
      class="control"
    >
      <select
        class="selectLine"
        data-testid="select-line"
      >
        <option
          value="0"
        >
          #process1
        </option>
        <option
          value="1"
        >
          #process2
        </option>
        <option
          value="2"
        >
          #process3
        </option>
      </select>
      <div
        class="buttons"
      >
        <button>
          -25
        </button>
        <button>
          -10
        </button>
        <button>
          +10
        </button>
        <button>
          +25
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessBar should increase the progress bar value when clicking the +10 button 1`] = `
<div
  class="App"
  data-testid="process-bar"
>
  <div
    class="App-container"
  >
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-0"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-0"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-1"
      >
        10%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-1"
        style="width: 10%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-2"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-2"
        style="width: 0%;"
      />
    </div>
    <div
      class="control"
    >
      <select
        class="selectLine"
        data-testid="select-line"
      >
        <option
          value="0"
        >
          #process1
        </option>
        <option
          value="1"
        >
          #process2
        </option>
        <option
          value="2"
        >
          #process3
        </option>
      </select>
      <div
        class="buttons"
      >
        <button>
          -25
        </button>
        <button>
          -10
        </button>
        <button>
          +10
        </button>
        <button>
          +25
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessBar should match the snapshot 1`] = `
<div>
  <div
    class="App"
    data-testid="process-bar"
  >
    <div
      class="App-container"
    >
      <h1>
        Process Bar Demo
      </h1>
      <div
        class="progress-container"
      >
        <p
          class="progress-value"
          data-testid="progress-value-0"
        >
          0%
        </p>
        <div
          class="progress-bar"
          data-testid="progress-bar-0"
          style="width: 0%;"
        />
      </div>
      <div
        class="progress-container"
      >
        <p
          class="progress-value"
          data-testid="progress-value-1"
        >
          0%
        </p>
        <div
          class="progress-bar"
          data-testid="progress-bar-1"
          style="width: 0%;"
        />
      </div>
      <div
        class="progress-container"
      >
        <p
          class="progress-value"
          data-testid="progress-value-2"
        >
          0%
        </p>
        <div
          class="progress-bar"
          data-testid="progress-bar-2"
          style="width: 0%;"
        />
      </div>
      <div
        class="control"
      >
        <select
          class="selectLine"
          data-testid="select-line"
        >
          <option
            value="0"
          >
            #process1
          </option>
          <option
            value="1"
          >
            #process2
          </option>
          <option
            value="2"
          >
            #process3
          </option>
        </select>
        <div
          class="buttons"
        >
          <button>
            -25
          </button>
          <button>
            -10
          </button>
          <button>
            +10
          </button>
          <button>
            +25
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessBar should not exceed 100% when clicking the +10 button repeatedly but the value shown can exceed 100% 1`] = `
<div
  class="App"
  data-testid="process-bar"
>
  <div
    class="App-container"
  >
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-0"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-0"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-1"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-1"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-2"
      >
        120%
      </p>
      <div
        class="progress-bar red"
        data-testid="progress-bar-2"
        style="width: 100%;"
      />
    </div>
    <div
      class="control"
    >
      <select
        class="selectLine"
        data-testid="select-line"
      >
        <option
          value="0"
        >
          #process1
        </option>
        <option
          value="1"
        >
          #process2
        </option>
        <option
          value="2"
        >
          #process3
        </option>
      </select>
      <div
        class="buttons"
      >
        <button>
          -25
        </button>
        <button>
          -10
        </button>
        <button>
          +10
        </button>
        <button>
          +25
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessBar should not go below 0% when decreasing the progress bar value 1`] = `
<div
  class="App"
  data-testid="process-bar"
>
  <div
    class="App-container"
  >
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-0"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-0"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-1"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-1"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-2"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-2"
        style="width: 0%;"
      />
    </div>
    <div
      class="control"
    >
      <select
        class="selectLine"
        data-testid="select-line"
      >
        <option
          value="0"
        >
          #process1
        </option>
        <option
          value="1"
        >
          #process2
        </option>
        <option
          value="2"
        >
          #process3
        </option>
      </select>
      <div
        class="buttons"
      >
        <button>
          -25
        </button>
        <button>
          -10
        </button>
        <button>
          +10
        </button>
        <button>
          +25
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProcessBar should render progress bars with initial values 1`] = `
<div
  class="App"
  data-testid="process-bar"
>
  <div
    class="App-container"
  >
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-0"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-0"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-1"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-1"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-container"
    >
      <p
        class="progress-value"
        data-testid="progress-value-2"
      >
        0%
      </p>
      <div
        class="progress-bar"
        data-testid="progress-bar-2"
        style="width: 0%;"
      />
    </div>
    <div
      class="control"
    >
      <select
        class="selectLine"
        data-testid="select-line"
      >
        <option
          value="0"
        >
          #process1
        </option>
        <option
          value="1"
        >
          #process2
        </option>
        <option
          value="2"
        >
          #process3
        </option>
      </select>
      <div
        class="buttons"
      >
        <button>
          -25
        </button>
        <button>
          -10
        </button>
        <button>
          +10
        </button>
        <button>
          +25
        </button>
      </div>
    </div>
  </div>
</div>
`;
